[package]
authors = ['Mathwallet DevHub <https://github.com/mathwallet>']
description = 'MathChain is the Polkadot Smart Wallet Parachain based on Substrate'
edition = '2018'
homepage = 'https://mathwallet.net/mathchain'
license = 'Unlicense'
name = 'mathchain-runtime-galois'
repository = 'https://github.com/mathwallet/MathChain/'
version = '0.1.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { default-features = false, package = "frame-system", git = "https://github.com/paritytech/substrate" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate" }

pallet-ethereum = { default-features = false, git = "https://github.com/paritytech/frontier" }
pallet-evm = { default-features = false, git = "https://github.com/paritytech/frontier" }
pallet-dynamic-fee = { default-features = false, git = "https://github.com/paritytech/frontier" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/paritytech/frontier" }
pallet-evm-precompile-sha3fips = { default-features = false, git = "https://github.com/paritytech/frontier" }
pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/paritytech/frontier" }
pallet-account-service = { default-features = false, path = "../../frame/account-service" }
pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-recovery = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate" }

sp-api = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate"}
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate" }

fp-rpc = { default-features = false, git = "https://github.com/paritytech/frontier" }

# benchmarking dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }
frame-system-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, optional = true }

pallet-validator-set = { default-features = false, path = "../../frame/validator-set" }

secretstore-runtime-module = { package = "parity-secretstore-substrate-runtime-module", path = "../../frame/secret-store/module", default-features = false }
secretstore-runtime-primitives = { package = "parity-secretstore-substrate-runtime-primitives", path = "../../frame/secret-store/primitives", default-features = false }


[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate" }

[features]
default = ["std", "aura"]
aura = []
manual-seal = []
std = [
	"codec/std",
	"serde",

	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"fp-rpc/std",

	"pallet-ethereum/std",
	"pallet-evm/std",
	"pallet-dynamic-fee/std",
	"pallet-evm-precompile-simple/std",
	"pallet-evm-precompile-sha3fips/std",
  "pallet-recovery/std",
	"pallet-account-service/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-validator-set/std",
	"pallet-session/std",

  "secretstore-runtime-module/std",
	"secretstore-runtime-primitives/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-benchmarking/std",
	"frame-system-benchmarking/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
]
