[package]
name = "parity-secretstore-substrate-runtime-module"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", rev = "ec180313", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", rev = "ec180313", default-features = false }
primitives = { package = "parity-secretstore-substrate-runtime-primitives", path = "../primitives", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "ec180313", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", rev = "ec180313", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "ec180313", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", rev = "ec180313", default-features = false }

[dev-dependencies]
parity-crypto = { version = "0.8", features = ["publickey"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"primitives/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]