[package]
name = "parity-secretstore-substrate-runtime-primitives"
version = "1.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f", default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
]
